cluster/apps/infrastructure/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: https://oauth.sso.hermleigh.home
    authResponseHeaders:
    - Authorization
    - Set-Cookie
    authResponseHeadersRegex: ^X-
    trustForwardHeader: true
